Bug 633924 - MethodGIT broken on mingw-w64 win64 build r=dvander